objects/AE_VendorRuleSet__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AE_VendorRuleSets</relationshipLabel>
        <relationshipName>AE_VendorRuleSets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ApSmart_AdditionalItem_DrumCharge__c</fullName>
        <label>AdditionalItem_DrumCharge</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApSmart_AdditionalItem_Freight__c</fullName>
        <label>AdditionalItem_Freight</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>DueDate</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>InvoiceDate</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>InvoiceNumber</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceTotal__c</fullName>
        <label>InvoiceTotal</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PoNumber__c</fullName>
        <label>PoNumber</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaxTotal__c</fullName>
        <label>TaxTotal</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VendorName__c</fullName>
        <label>VendorName</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>AE_VendorRuleSet</label>
    <nameField>
        <label>AE_VendorRuleSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE_VendorRuleSets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>